langbox/tests/invalid_parser_or_default.stderr
error[E0277]: the trait bound `T: Default` is not satisfied
   --> tests/invalid_parser_or_default.rs:6:5
    |
6   |     parser!(%a)
    |     ^^^^^^^^^^^ the trait `Default` is not implemented for `T`
    |
note: required by a bound in `or_default`
   --> src/parser.rs
    |
    |     fn or_default(self) -> impl Parser<TokenKind, T, E>
    |        ---------- required by a bound in this associated function
    |     where
    |         T: Default,
    |            ^^^^^^^ required by this bound in `Parser::or_default`
    = note: this error originates in the macro `parser` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
3   | fn p<TokenKind, T: std::default::Default, E>(
    |                  +++++++++++++++++++++++

error[E0277]: the trait bound `impl langbox::Parser<TokenKind, T, E>: langbox::Parser<TokenKind, T, E>` is not satisfied
 --> tests/invalid_parser_or_default.rs:5:6
  |
5 | ) -> impl Parser<TokenKind, T, E> {
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `langbox::Parser<TokenKind, T, E>` is not implemented for `impl langbox::Parser<TokenKind, T, E>`
6 |     parser!(%a)
  |     ----------- return type was inferred to be `impl langbox::Parser<TokenKind, T, E>` here

error[E0277]: the trait bound `T: Default` is not satisfied
   --> tests/invalid_parser_or_default.rs:5:6
    |
5   | ) -> impl Parser<TokenKind, T, E> {
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `T`
    |
note: required by a bound in `langbox::Parser::{synthetic#3}`
   --> src/parser.rs
    |
    |         T: Default,
    |            ^^^^^^^ required by this bound in `Parser::{synthetic#3}`
help: consider restricting type parameter `T`
    |
3   | fn p<TokenKind, T: std::default::Default, E>(
    |                  +++++++++++++++++++++++
